--- a/samples/Main.mxml
+++ b/samples/Main.mxml
@@ -3,7 +3,7 @@
 <f:Application xmlns:fx="http://ns.adobe.com/mxml/2009"
     xmlns:f="library://ns.feathersui.com/mxml"
 	xmlns:components="feathers.extensions.color.*"
-	theme="feathers.themes.MetalWorksDesktopTheme">
+	theme="feathers.extensions.themes.MetalWorksDesktopTheme">
 	
     <fx:Script>
         <![CDATA[
